[gd_scene load_steps=22 format=3 uid="uid://cqte5q6tqw3oi"]

[ext_resource type="Texture2D" uid="uid://hjo5iph33hy7" path="res://Mecha-stoneGolem/PNG sheet/Character_sheet.png" id="1_i7ikm"]
[ext_resource type="Script" path="res://Mecha-stoneGolem/BossGolem.gd" id="1_uipjh"]
[ext_resource type="Texture2D" uid="uid://d2omf0pu1p4o3" path="res://Mecha-stoneGolem/weapon PNG/Laser_sheet.png" id="2_sd6da"]
[ext_resource type="Script" path="res://Mecha-stoneGolem/FiniteStateMachine.gd" id="3_ixgr7"]
[ext_resource type="Script" path="res://Boss_State.gd" id="4_nnjfg"]
[ext_resource type="Script" path="res://Mecha-stoneGolem/Boss_Idle.gd" id="4_ntux0"]
[ext_resource type="Script" path="res://Mecha-stoneGolem/Boss_Follow.gd" id="5_7d6sr"]

[sub_resource type="Animation" id="Animation_5chpi"]
resource_name = "Boss Laser Attack"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 2, 3, 4, 6, 7, 8, 9, 11, 12, 13, 14, 0]
}

[sub_resource type="Animation" id="Animation_kfwxh"]
resource_name = "Boss_Armor_Buff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fk4p7"]
resource_name = "Boss_Block"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1dgec"]
resource_name = "Boss_Death"
length = 1.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eca25"]
resource_name = "Boss_Glowing"
length = 0.80001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dw2gk"]
resource_name = "Boss_Idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6pj5c"]
resource_name = "Boss_Laser_Cast"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_51q8p"]
resource_name = "Boss_Melee_Attack"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4ylvb"]
resource_name = "Boss_Ranged_Attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qkiem"]
resource_name = "Boss_Slained"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_flu8y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sacby"]
_data = {
"Boss Laser Attack": SubResource("Animation_5chpi"),
"Boss_Armor_Buff": SubResource("Animation_kfwxh"),
"Boss_Block": SubResource("Animation_fk4p7"),
"Boss_Death": SubResource("Animation_1dgec"),
"Boss_Glowing": SubResource("Animation_eca25"),
"Boss_Idle": SubResource("Animation_dw2gk"),
"Boss_Laser_Cast": SubResource("Animation_6pj5c"),
"Boss_Melee_Attack": SubResource("Animation_51q8p"),
"Boss_Ranged_Attack": SubResource("Animation_4ylvb"),
"Boss_Slained": SubResource("Animation_qkiem"),
"RESET": SubResource("Animation_flu8y")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8j76"]
radius = 14.0
height = 49.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4qdmf"]
radius = 100.0

[node name="BossGolem" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_uipjh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_i7ikm")
hframes = 10
vframes = 10

[node name="Pivot" type="Node2D" parent="."]
visible = false
position = Vector2(2, -17)
rotation = -0.174533

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
visible = false
position = Vector2(97.496, 17.1912)
texture = ExtResource("2_sd6da")
vframes = 15
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sacby")
}
autoplay = "Boss_Idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(150, 20)
offset_left = 91.0
offset_top = 71.0
offset_right = 241.0
offset_bottom = 98.0
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_left = 18.0
offset_top = -23.0
offset_right = 131.0
text = "STONE GOLEM"

[node name="Label" type="Label" parent="UI"]
offset_left = 105.0
offset_top = 58.0
offset_right = 202.0
offset_bottom = 81.0
text = "Boss Slained"

[node name="Debug" type="Label" parent="."]
offset_left = -24.0
offset_top = -47.0
offset_right = 26.0
offset_bottom = -24.0
text = "Debug"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2.5)
shape = SubResource("CapsuleShape2D_v8j76")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_4qdmf")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_ixgr7")

[node name="Boss_Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_ntux0")

[node name="Boss_Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_7d6sr")

[node name="Boss_MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_nnjfg")

[node name="Boss_LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_nnjfg")

[node name="Boss_ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_nnjfg")

[node name="Boss_Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_nnjfg")

[node name="Boss_Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_nnjfg")

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Boss_Idle" method="_on_player_detection_body_entered"]
